# qG13d

./: CMakeLists.txt  LICENSE.MD  README.MD
images/: images.qrc
qml/: FilePicker.qml  G13Layout.qml  KeysPage.qml  MacrosPage.qml  ScreenPage.qml  main.qml  qml.qrc
src/: g13system.cpp  g13system.hpp  main.cpp
